--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/navigation_bar' %>
     <%= render 'layouts/notices_and_alerts' %>
     <%= yield %>
   </body>
