--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
   </head>
 
   <body>
-    <%= render 'layouts/notices_and_alerts' %>
-    <%= yield %>
+    <div class="container">
+      <%= render 'layouts/navigation_bar' %>
+      <%= render 'layouts/notices_and_alerts' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
